--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -405,6 +405,19 @@
   langid = {english}
 }
 
+@article{deakin1966functions,
+  title = {Functions of a {{Dual}} or {{Duo Variable}}},
+  author = {Deakin, M. A. B.},
+  date = {1966},
+  journaltitle = {Mathematics Magazine},
+  volume = {39},
+  pages = {215--219},
+  publisher = {{Taylor \& Francis}},
+  doi = {10.1080/0025570X.1966.11975721},
+  annotation = {\_eprint: https://doi.org/10.1080/0025570X.1966.11975721},
+  number = {4}
+}
+
 @book{devroye1986nonuniform,
   title = {Non-Uniform Random Variate Generation},
   author = {Devroye, Luc},
@@ -443,6 +456,16 @@
   origdate = {2016-02-23T00:14:17Z},
   url = {https://github.com/chi-feng/mcmc-demo},
   urldate = {2020-11-22}
+}
+
+@incollection{fike2012automatic,
+  title = {Automatic Differentiation through the Use of Hyper-Dual Numbers for Second Derivatives},
+  booktitle = {Recent {{Advances}} in {{Algorithmic Differentiation}}},
+  author = {Fike, Jeffrey A and Alonso, Juan J},
+  date = {2012},
+  pages = {163--173},
+  publisher = {{Springer}},
+  doi = {10.1007/978-3-642-30023-3_15}
 }
 
 @article{fritz2020synthetica,
@@ -1346,6 +1369,14 @@
   type = {Dissertation}
 }
 
+@unpublished{sajovic2016operational,
+  title = {Operational Calculus on Programming Spaces},
+  author = {Sajovic, Žiga and Vuk, Martin},
+  date = {2016},
+  url = {https://arxiv.org/pdf/1610.07690.pdf},
+  urldate = {2017-02-13}
+}
+
 @article{salvatier2016probabilistic,
   title = {Probabilistic Programming in {{Python}} Using {{PyMC3}}},
   author = {Salvatier, John and Wiecki, Thomas V. and Fonnesbeck, Christopher},
@@ -1612,6 +1643,19 @@
   primaryClass = {cs, stat}
 }
 
+@article{wengert1964simple,
+  title = {A Simple Automatic Derivative Evaluation Program},
+  author = {Wengert, R. E.},
+  date = {1964-08},
+  journaltitle = {Communications of the ACM},
+  shortjournal = {Commun. ACM},
+  volume = {7},
+  pages = {463--464},
+  doi = {10.1145/355586.364791},
+  langid = {english},
+  number = {8}
+}
+
 @inproceedings{wigren2019parameter,
   title = {Parameter Elimination in Particle {{Gibbs}} Sampling},
   booktitle = {Advances in {{Neural Information Processing Systems}}},
@@ -1658,7 +1702,7 @@
 
 @article{wood2015new,
   title = {A {{New Approach}} to {{Probabilistic Programming Inference}}},
-  author = {Wood, Frank and van de Meent, Jan Willem and Mansinghka, Vikash},
+  author = {Wood, Frank and van de Meent, Jan-Willem and Mansinghka, Vikash},
   date = {2015-07-03},
   url = {http://arxiv.org/abs/1507.00996},
   urldate = {2019-10-15},
