--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -71,6 +71,12 @@ with respect the Lebesgue measure, we speak of a continuous random variable.
 \chapter{Details of Automatic Differentiation}
 \label{ch:ad-details}
 
+The standard reference for AD is \textcite{griewank2008evaluating}.  \textcite{baydin2018automatic}
+gives a comprehensive survey including a comparison of state-of-the-art implementations.  There are
+many works on the formalization of AD; see, for example, \textcite{abadi2020simple},
+\textcite{vytiniotis2019differentiable}, \textcite{wang2019demystifying},
+\textcite{sajovic2016operational}, or \textcite{elliott2018simple}.
+
 To understand how AD works, let us first start with the mathematics.  What is a derivative, really?
 When we talk about gradients, which is what we really need in a gradient algorithm, this is usually
 a rather informal term for \enquote{the vector of partial derivatives}, which then points into an
@@ -78,9 +84,11 @@ ascent direction.  This is however not the most natural form to work with in a c
 approach.  Instead of starting with a limit of tangent slopes, more insight is provided by viewing
 derivatives as best-approximating linear operators.  One of the most general definitions is provided
 through the \emph{Fréchet derivative} \parencite[p. 463]{bronstein1995taschenbuch}, essentially a
-generalization of the total differential.  Let \(X\) and \(Y\) be normed spaces.  A function
-\(f: U \subseteq X \to Y\) is Fréchet differentiable at a point \(x \in U\) if there exists a
-bounded linear operator \(A: X \to Y\) such that
+generalization of the total differential\footnote{I prefer thinking in terms of the Fréchet
+  derivative, since it makes explicit the fact that derivatives are operators, and provides enough
+  flexibility while still being intuitive.  Different abstractions are possible, though.}.  Let
+\(X\) and \(Y\) be normed spaces.  A function \(f: U \subseteq X \to Y\) is Fréchet differentiable
+at a point \(x \in U\) if there exists a bounded linear operator \(A: X \to Y\) such that
 \begin{equation}
   \label{eq:frechet}
   \lim_{\enVert{\Delta}_X \to 0} \frac{\enVert{f(x + \Delta) - f(x) -
@@ -148,9 +156,9 @@ composition, we have:
   \end{aligned}
 \end{equation}
 (where \(\ident\) is the identity function, and
-\((\phi \otimes \psi)(\alpha, \beta) = (\phi(\alpha), \psi(\beta))\) is defines product morphisms).
-In order to calculate this algorithmically, let us expand the computation of \(f\) into a sequence
-of intermediate, primitive calculations, as we would have in a programmatical representation:
+\((\phi \otimes \psi)(\alpha, \beta) = (\phi(\alpha), \psi(\beta))\) defines product morphisms).  In
+order to calculate this algorithmically, let us expand the computation of \(f\) into a sequence of
+intermediate, primitive calculations, as we would have in a programmatical representation:
 \begin{equation}
   \label{eq:ad-primal}
   \begin{aligned}
@@ -312,11 +320,11 @@ optimal order of derivative evaluation is hard~-- this so-called \emph{optimal J
 \label{sec:dual-numbers}
 
 Forward mode can be recast in mathematically equivalent form by using dual numbers
-\parencite[see][section 3.1.1]{baydin2018automatic}.  These consist of two parts, similar to complex
-numbers: \(z = x + y\epsilon\).  However, contrary to the imaginary unit, the infinitesimal unit
-\(\epsilon\) vanishes under multiplication with itself: \(\epsilon^2 = 0\).  The consequence of this
-is that functions can naturally be extended to dual numbers by nonstandard interpretation as
-truncated Taylor series:
+\parencite[see][section 3.1.1]{baydin2018automatic}{deakin1966functions}.  These consist of two
+parts, similar to complex numbers: \(z = x + y\epsilon\).  However, contrary to the imaginary unit,
+the infinitesimal unit \(\epsilon\) vanishes under multiplication with itself: \(\epsilon^2 = 0\).
+The consequence of this is that functions can naturally be extended to dual numbers by nonstandard
+interpretation as truncated Taylor series:
 \begin{equation}
   \phi(x + \epsilon) = \phi(x) + \partial_1\phi(x)\epsilon + \underbrace{\frac{\partial^2_1\phi(x)}{2}\epsilon^2
   + \ldots}_{\epsilon^2 (\ldots) = 0}
@@ -326,8 +334,8 @@ calculated during the lockstep evaluation in forward mode:
 \begin{equation}
   (z, \dot{z}) = (\phi(x), \Dif\phi(x)(\dot{x})) \quad\Leftrightarrow\quad z + \dot{z}\epsilon = \phi(x + \dot{x}\epsilon).
 \end{equation}
-(generalization to higher dimensions, as well as higher derivatives in form of hyper-dual numbers,
-follow equally naturally.)
+The generalization to higher dimensions, as well as higher derivatives in form of hyper-dual numbers
+\parencite{fike2012automatic}, follow naturally.
 
 
 
