--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -490,7 +490,7 @@
 }
 
 @misc{gabler2020mcmc,
-  title = {{{MCMC}} Simulation Data for \{\vphantom\}{{AutoGibbs}}.Jl\vphantom\{\} Benchmarks},
+  title = {{{MCMC}} Simulation Data for {{AutoGibbs}}.Jl Benchmarks},
   author = {Gabler, Philipp},
   date = {2020-12},
   doi = {10.5281/zenodo.4307916}
