--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -199,7 +199,7 @@ transparent.  These properties make analysis and code transformations, similar t
 with \juliapackage{IRTools.jl}, significantly easier and more general.  On the formal representation
 we can then apply transformations such as specialization on a constant parameter or observation,
 resulting in a new model in IR form, exploitation of probabilistic knowledge, like collapsing or
-conjugacy exploitation, or \enquote{disaggretating} a non-parametric model into something sampleable
+conjugacy exploitation, or \enquote{disaggregating} a non-parametric model into something sampleable
 (e.g., re-representing a Dirichlet process model with a CRP-based one), or other changes of the
 probabilistic structure.  We can also apply static analysis or abstract interpretation techniques:
 e.g., extraction of Gibbs conditionals.  Finally, the model can be converted into a form fit for
