--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -293,6 +293,7 @@
 \cleartorecto
 \include{abstract}
 
+\include{acknowledgements}
 
 %-------------------------------------------------------------------------------
 % TOC
@@ -303,8 +304,6 @@
 \currentpdfbookmark{Contents}{toc}
 \tableofcontents*
 \endgroup
-
-% \include{acknowledgements}
 
 \include{notation}
 
