Note some typographic todos, minor fixes

--- a/thesis/automatic_graph_tracking.tex
+++ b/thesis/automatic_graph_tracking.tex
@@ -29,7 +29,7 @@ inspection and transformation of the IR of given functions.  This technique can 
 recursively traverse the implementation of a given function, annotating each operation with
 necessary tracking statements, and changing the inputs and outputs accordingly to extract this
 information from outside.  To ensure sufficient generality, we requite the following properties of
-the tracking system:
+the tracking system:\todo{page break}
 \begin{enumerate}
   \firmlist
 \item Storage of all intermediate values during execution.
