--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -25,8 +25,9 @@ e.g., subsuming \jlinl{x[1:10]} under \jlinl{x[1:3][2]}, and the correct handlin
 shadow actual data dependencies.  The latter occurs in cases where one has, for example, an array
 \jlinl{x}, samples a value \jlinl{x[1]}, writes that to \jlinl{x} with \jlinl{setindex!}, and then
 uses \jlinl{getindex(x, 1)} somewhere downstream.  A more versatile dictionary structure for
-variable name keys could improve the situation for variable names, but wouldn't solve all of the
-underlying issues.
+variable name keys could improve the situation for variable names\footnote{Work to tackle these
+  issues have already been begun in \turingjl{}, as of December 2020.}, but wouldn't solve all of
+the underlying issues.
 
 There is also a fragility problem: Julia IR, while being publicly documented, is a rather internal
 feature of the language, and may change between compiler versions.  The \juliapackage{IRTools.jl}
