Update bibliography and date

--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -355,10 +355,10 @@
 }
 
 @inproceedings{cox2018forneylab,
-  title = {{{ForneyLab}}. Jl: Fast and Flexible Automated Inference through Message Passing in {{Julia}}},
+  title = {{{ForneyLab}}.Jl: Fast and Flexible Automated Inference through Message Passing in {{Julia}}},
   author = {Cox, Marco and van de Laar, Thijs and de Vries, Bert},
   date = {2018},
-  eventtitle = {{{ProbProg}}},
+  eventtitle = {{{ProbProg}} 2018},
   options = {useprefix=true}
 }
 
@@ -378,7 +378,7 @@
   author = {Cusumano-Towner, Marco Francis},
   date = {2020},
   institution = {{Massachusetts Institute of Technology}},
-  location = {{Massachusetts}},
+  location = {{Cambridge}},
   langid = {english},
   type = {PhD Thesis}
 }
@@ -548,7 +548,7 @@
   title = {Bayesian {{Data Analysis}}},
   author = {Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
   date = {2020},
-  edition = {3rd},
+  edition = {3},
   url = {http://www.stat.columbia.edu/~gelman/book/},
   langid = {english}
 }
@@ -732,7 +732,8 @@
   date = {2018},
   url = {https://www.youtube.com/watch?v=HSneJdPkaKk},
   urldate = {2019-05-01},
-  eventtitle = {2018 {{LLVM Developers}}' {{Meeting}}}
+  eventtitle = {2018 {{LLVM Developers}}' {{Meeting}}},
+  type = {Presentation}
 }
 
 @book{hoyte2008let,
@@ -838,7 +839,9 @@
   title = {Foundations of Modern Probability},
   author = {Kallenberg, Olav},
   date = {2006},
-  publisher = {{Springer Science \& Business Media}}
+  publisher = {{Springer}},
+  location = {{New York}},
+  series = {Probability and Its {{Applications}}}
 }
 
 @article{kelsey1995correspondence,
@@ -1365,16 +1368,22 @@
   author = {Ruozzi, Nicholas Robert},
   date = {2011},
   institution = {{Yale University}},
+  location = {{Yale}},
   langid = {english},
-  type = {Dissertation}
+  type = {PhD Thesis}
 }
 
-@unpublished{sajovic2016operational,
-  title = {Operational Calculus on Programming Spaces},
+@online{sajovic2016operational,
+  title = {Operational {{Calculus}} for {{Differentiable Programming}}},
   author = {Sajovic, Žiga and Vuk, Martin},
-  date = {2016},
-  url = {https://arxiv.org/pdf/1610.07690.pdf},
-  urldate = {2017-02-13}
+  date = {2016-10-24},
+  url = {http://arxiv.org/abs/1610.07690},
+  urldate = {2020-12-22},
+  archivePrefix = {arXiv},
+  eprint = {1610.07690},
+  eprinttype = {arxiv},
+  primaryClass = {cs, math},
+  version = {1}
 }
 
 @article{salvatier2016probabilistic,
@@ -1579,7 +1588,6 @@
   editor = {Bengio, S. and Wallach, H. and Larochelle, H. and Grauman, K. and Cesa-Bianchi, N. and Garnett, R.},
   date = {2018},
   pages = {6256--6265},
-  publisher = {{Curran Associates, Inc.}},
   url = {http://papers.nips.cc/paper/7863-tangent-automatic-differentiation-using-source-code-transformation-for-dynamically-typed-array-programming.pdf},
   eventtitle = {{{NeurIPS}}},
   options = {useprefix=true}
@@ -1589,7 +1597,8 @@
   title = {Lectures on Stochastic Simulation},
   author = {Vihola, Matti},
   date = {2020},
-  location = {{University of Jyväskylä}},
+  institution = {{University of Jyväskylä}},
+  location = {{Jyväskylä}},
   url = {http://users.jyu.fi/~mvihola/stochsim/},
   langid = {english},
   type = {Lecture Notes}
