--- a/thesis/title.tex
+++ b/thesis/title.tex
@@ -72,7 +72,7 @@ Faculty of Electrical and Information Engineering
 
 \vfill\vfill\vfill
 
-{\scriptsize Graz, XXXX~2020}
+{\scriptsize Graz, December~2020}
 
 \end{center}
 \end{titlingpage}
